# mowazi

./: .env.agents.example  .env.example  .gitignore  AGENTS.md  AccountDrawer.md  README.md  STYLEGUIDE.md  TODO.md  docker-compose.agents.yml  middleware.ts  next.config.ts  package.json  skills-lock.json
agent-service/: Dockerfile  pyproject.toml
agent-service/loadtest/: k6.js
agent-service/migrations/: 001_agent_platform.sql  002_byok_monitoring.sql  003_openrouter.sql
agent-service/scripts/: export_schemas.py
agent-service/src/moeazi_agent/: __init__.py  analysis_completion.py  api.py  authority.py  config.py  contracts.py  convex.py  coordination.py  costs.py  credentials.py  credits.py  data_adapters.py  dispatcher.py  execution.py  execution_api.py  execution_workflow.py  ingestor.py  job_dispatch.py  model_routing.py  monitoring_api.py  observability.py  openrouter_provider.py  orchestrator.py  policy.py  policy_draft.py  proposal_routing.py  provider_api.py  provider_budget.py  provider_catalog.py  provider_credentials.py  provider_factory.py  providers.py  roles.py  routing_adapters.py  routing_contracts.py  (+15 more)
agent-service/tests/: test_arbitrum_swap_contracts.py  test_authority.py  test_contracts_and_synthesis.py  test_costs.py  test_deepseek_contract.py  test_dispatcher.py  test_job_dispatch.py  test_model_routing.py  test_openrouter_contract.py  test_orchestrator.py  test_policy.py  test_policy_draft.py  test_provider_connections.py  test_roles_and_credits.py  test_routing.py  test_runtime_controls.py  test_security.py  test_tracing.py  test_uniswap.py
(+311 files in other folders)
